# chainmonitor

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  INFRASTRUCTURE_DEEP_DIVE.md  INFRASTRUCTURE_GUIDE.md  PRD-v1.0-任务规划与校验点.md  PRD-v1.0.md  PRD-v1.1.md  README.md  alembic.ini  ci_migration_local.db  gmgn.md  opencode.json  pyproject.toml
alembic/: env.py  script.py.mako
deploy/: Dockerfile.app  docker-compose.lite.yml  docker-compose.yml
docs/: CHAINMONITOR_DEV_SPEC.md
logs/: scanner-analysis-2026-04-29.jsonl
requirements/: base.txt  dev.txt
scripts/: bsc-run-once.ps1  check.ps1  ci-ai-review-repair-gate.ps1  db-backup.ps1  db-restore.ps1  db-revision.ps1  db-upgrade.ps1  dev.ps1  dev_all_execution_process.md  migration-check.ps1  phase2-full-check.ps1  run-scanner.ps1  setup.ps1  smoke.ps1
tests/: test_ai_review_repair_ci_entry.py  test_ai_review_repair_skill_contract.py  test_ai_review_repair_task5_validation.py  test_base_live_source_strategy.py  test_bsc_ingestion_source.py  test_bsc_scoring_engine.py  test_geckoterminal_strategy.py  test_healthz.py  test_ingestion_factory.py  test_ingestion_regression_baseline.py  test_ingestion_resilience.py  test_migration_batch2_tables.py  test_migration_batch3_tables.py  test_migration_bsc_pipeline_runs.py  test_migration_candidate_snapshot_chain_ts_index.py  test_migration_core_tables.py  test_migration_pipeline_runs_run_id.py  test_migration_pipeline_runs_table.py  test_migration_upgrade_real_db.py  test_phase1_multichain.py  (+20 more)
(+137 files in other folders)
